styles/Navbar.module.css
/* Navbar.module.css */

.navbar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 20px 200px;
  padding-top: 30px;
}

.navlist {
  display: flex;
  list-style: none;
  align-items: center;
}

.logo {
  width: 130px;
}

.navlistitem {
  margin: 0px 25px;
  text-align: center;
  font-size: 18px;
}

.navText {
  color: rgba(240, 248, 255, 0.587);
  text-decoration: none;
}

.navText:hover {
  color: rgba(240, 248, 255, 0.85);
  text-decoration: none;
}

.navTextActive{
  color: rgba(240, 248, 255, 0.85);
  /* color: rgba(240, 248, 255, 0.587); */
  /* text-decoration: underline; */
  text-decoration: none;
}

.connectButton {
  width: 180px;
  cursor: pointer;
  padding: 8px 20px;
  font-size: 17px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-weight: 500;
  color: #101014;
  border: none;
  background: linear-gradient(45deg, #3c51ae, #30b9ed) 0;
  border-radius: 30px;
}

.connectButton:hover {
  background: linear-gradient(45deg, #3a4ea9f8, #2ba2d1f6);
}

.diconnectButtonHandler {
  min-width: 180px;
  cursor: pointer;
  padding: 8px 20px;
  font-size: 17px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-weight: 500;
  color: #2ba2d1f6;
  border-radius: 30px;
  border: none;
  border: 1px solid #2ba2d1f6;

  /* background: linear-gradient(45deg, #3c51ae, #30b9ed); */
}
.diconnectButtonHandler:hover {
  /* background: linear-gradient(45deg, #3a4ea9f8, #2ba2d1f6); */
  background-color: #2ba2d1f6;
  color: #101014;
}

/* .modal {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.5);
  display: flex;
  justify-content: center;
  align-items: center;
}

.modalContent {
  background-color: white;
  padding: 20px;
  border-radius: 10px;
} */

.modalOverlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.4);
  display: flex;
  justify-content: center;
  align-items: center;
}

.modalContent {
  background-color: aliceblue;
  padding: 20px;
  border-radius: 10px;
  width: 20%;
  max-height: 30%;
  overflow-y: auto;
}

.modalHeader {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  align-items: center;
  border-bottom: 1px solid #ccc;
  padding-bottom: 10px;
  margin-bottom: 20px;
  background-color: transparent;
}

.modalHeader h2 {
  margin: 0;
  color: #101014;
  background-color: transparent;
  font-size: 20px;
}

.modalFooter {
  text-align: center;
  background-color: transparent;
  /* background-color: #30b9ed; */
}

.networkSwitchButton {
  width: 100%;
  margin-bottom: 10px;
  padding: 8px 25px;
  background-color: #0000001c;
  border: none;
  font-size: 17px;
  border-radius: 10px;
  cursor: pointer;
  color: #101014;
}

.networkSwitchButton:hover {
  background-color: #00000026;
}

.currentNetworkName {
  background: transparent;
  color: #101014;
  font-size: 15px;
  margin-bottom: 20px;
  font-weight: 400;
}

.disconnectButton {
  width: 100%;
  padding: 8px 25px;
  background-color: #ff6961e3;
  border: none;
  font-size: 17px;
  border-radius: 10px;
  cursor: pointer;
  color: #101014;
}
.disconnectButton:hover {
  background-color: #ff6961;
}

.modalCrossButton {
  padding: 6px 12px;
  color: #101014;
  cursor: pointer;

  background-color: #00000015;
  border: none;
  font-size: 12px;
  border-radius: 10px;
}
.modalCrossButton:hover {
  background-color: #00000020;
}

.copyButton {
  cursor: pointer;
  background: transparent;
  border-radius: 50px;
  border: none;
  text-align: center;
}

.copyIcon {
  margin: 0px 10px;
  margin-right: 15px;
  align-items: center;
  width: 20px;
  background: transparent;
}

.modalHeaderText {
  display: flex;
  align-items: center;
}

